--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
           <h2>Pros</h2>
           <div id="pros-container"></div>
           <button id="add-pros">Add +</button>
+          <div id="add" style="padding-top: 25px;"></div>
         </div>
         <div class="cons">
           <h2>Cons</h2>
           <div id="cons-container"></div>
           <button id="add-cons">Add +</button>
+          <div id="add2" style="padding-top: 25px;"></div>
         </div>
     </div>
     <script src="script.js"></script>
